Changelog
=========

2019.4.0rc2 (unreleased)
------------------------

- Update workflow security for opengever_workspace workflow to fix permission on existing workspaces. [elioschmutz]
- Move task reminders of responsibles to the successor, when accepting a multi admin unit task. [phgross]
- Bump ftw.tabbedview version to 4.1.3 [njohner]


2019.4.0rc1 (2019-08-08)
------------------------

- Implement SIP delivery via FilesystemTransport. [lgraf]
- Disallow deleting repository folders and roots except from the RepositoryDeleter. [njohner]
- Expose document actions in @actions endpoint in separate file_actions category. [njohner, deiferni]
- Nightly jobs: Add short -f option as alias for --force. [lgraf]
- Nightly jobs: Don't require ftw.raven when running locally [lgraf]
- Fix team actor profile_url for foreign users. [phgross]
- Include actor_id and actor_label in @notifications endpoint responses. [lgraf]
- Bump docxcompose version to 1.0.1 [njohner]
- Improve SIP package generation and download. [phgross]
- Fix qa tests. [lgraf]
- Disable properties action for teams. [deiferni]
- Add source vocabularies for workspace invitations and todo responsibles. [njohner]
- Add hard limit for number of todos in single workspace. [njohner]
- Enable c.indexing during tests, but patch it to not defer operations. [lgraf]
- Add teamraum todolist content-type. [phgross]
- Add teamraum todo content-type. [elioschmutz]
- Fix creation and handling for subtasks of sequential tasks. [phgross]
- Disable collective.indexing during bundle import. [buchi]
- Fix upgrade step that adds linguistic index for task principal. [lgraf]
- Add ftw.catalogdoctor to dependencies. [deiferni]
- Fix exception formatter patch when there is no plone site. [deiferni]
- @listing endpoint: Exclude searchroot from Solr results. [lgraf]
- Avoid reindexing 'created' during IObjectCopiedEvent to fix copy & pasting with Solr. [lgraf]